--- a/scss/layout/_footer.scss
+++ b/scss/layout/_footer.scss
@@ -1,41 +1,102 @@
-footer {
-    background-color: white;
-    padding: 20px;
+footer{
+  margin-top: 40px;
+  box-shadow: 0 -3px 3px rgba(0,0,0,.1);
+}
+.foooter{
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 50px;
+}
+
+.footer-logos img{
+  height: 40px;
+  margin-bottom: 40px;
+  margin-left: 10px;
+  &:hover{
+      transform: translateY(-5px);
+      color: #999;
+  }
+}
+
+.footer-links{
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
     text-align: center;
-    
-    .footer-logos {
-      margin-bottom: 40px;
-      
-      img {
-        width: 30px;
-        margin-right: 10px;
-        &:hover{
-            transform: translateY(-5px);
-            color: #999;
-        }
-      }
-    }
-    
-    .footer-links {
-      p {
-        margin-bottom: 10px;
-      }
-    }
-    .uy{
-    color: #999;
-    display: block;
-    font-size: .625rem;
+  .accesibilidad{
+    color: #777;
+    font-size: 1rem;
     font-weight: 300;
-    }
-    .company{
+  }
+  .company{
     color: #999;
     display: block;
     font-size: .875rem;
     font-weight: 300;
-    }
-    .accesibilidad{
-        color: #777;
-        font-size: 1rem;
-        font-weight: 300;
-        }
   }
+  .uy{
+    color: #999;
+    display: block;
+    font-size: .625rem;
+    font-weight: 300;
+  }
+}
+
+.mb-1 a{
+  color: #777;
+  &:hover{
+    color: black;
+  }
+}
+
+
+
+
+
+
+
+
+
+// footer {
+//     background-color: white;
+//     padding: 20px;
+//     text-align: center;
+    
+//     .footer-logos {
+//       margin-bottom: 40px;
+      
+//       img {
+//         width: 40px;
+//         margin-right: 10px;
+//         &:hover{
+//             transform: translateY(-5px);
+//             color: #999;
+//         }
+//       }
+//     }
+    
+//     .footer-links {
+//       p {
+//         margin-bottom: 10px;
+//       }
+//     }
+//     .uy{
+//     color: #999;
+//     display: block;
+//     font-size: .625rem;
+//     font-weight: 300;
+//     }
+//     .company{
+//     color: #999;
+//     display: block;
+//     font-size: .875rem;
+//     font-weight: 300;
+//     }
+//     .accesibilidad{
+//         color: #777;
+//         font-size: 1rem;
+//         font-weight: 300;
+//         }
+//   }
